    *** Map Display ***
	- Tapping compass direction on top of map screen rotates through rotation modes
	 (Movement Direction, Compass, Autoswitch, Manual Rotation)
	- On pinch rotate set manual rotation mode to stop compass readings from rotating the map
	  (can be restored to previous rotation mode by tapping "|" or pressing 5,
	  also will be restored to previous rotation mode after auto gps recenter time from Display Options)  
	*** Android support ***
	- respect Android display metrics for drawing ways accordingly wider on high density displays
    *** Usability ***
	- changing travel mode in the map screen will now trigger a route recalc if a route is currently displayed or calculated 
    *** Others ***
    - reverted possibe bugfix for startup trace crash issue on Nokia E72 when not in full-screen mode
      and Gps activated and started at startup, as it didn't fix the bug.

GpsMid 0.8.2
    *** Map Display ***
    - some support for on-the web raster map form; if a valid raster map url
      is configured and raster background map option is on, the raster map
      is shown as background to the normal vector map. Options for switching
      areas & buildings off if background raster map is shown.
      The map format is known also as TMS; although in strict terms it's not
      TMS, as tile numbering in the de facto standard tile servers is different
      than what's specified in TMS.
      There's some simple in-memory caching for J2ME and file caching to sdcard
      on Android (no file cache for J2ME yet).
    *** OSM Editing ***
    - possibility to open area for editing OSM data in web browser, default editor is
      currently Potlatch in openstreetmap.org
    *** Barrier support off by default***
    - Removing route connections because of barriers is disabled by default for now,
      as in some regions too many POIs becoming unreachable because of barriers before the